remove placeholder content

--- a/src/template.html
+++ b/src/template.html
@@ -10,9 +10,11 @@
         <nav>
             <button>Home</button>
             <button>Menu</button>
-            <button>About</button>
+            <button>Contact</button>
         </nav>
     </header>
-    <div id="content"></div>
+    <div id="content">
+
+    </div>
 </body>
 </html>
