--- a/src/template.html
+++ b/src/template.html
@@ -10,11 +10,14 @@
         <nav>
             <button>Home</button>
             <button>Menu</button>
-            <button>Contact</button>
+            <button>About</button>
         </nav>
     </header>
-    <div id="content">
 
-    </div>
+    <div id="content"></div>
+
+    <footer>
+        <p>ESB-11. All rights reserved</p>
+    </footer>
 </body>
 </html>
